--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <title>CommonJS React Skeleton</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     </head>
     <body>
         <div id="ingredients">
         </div>
-    <script src="js/main.js"></script>
+    
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
